updating as per mentor suggestion

--- a/Week-1/Session-02-HTML_Deployment/Submission/Advanced/newArticle.html
+++ b/Week-1/Session-02-HTML_Deployment/Submission/Advanced/newArticle.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>5 Things to Know About Rattlesnakes and Their Babies</title>
+    <img src="./UniversityLogo.png" alt="Logo of The University of Arizona" />
     <style>
       body {
         box-sizing: border-box;
@@ -60,7 +61,7 @@
       By Communications, UA College of Pharmacy <br />
       Aug. 6, 2014
     </p>
-    <img src="./snake.jpg" alt="'Logo of The University of Arizona" />
+    <img src="./SnakeBite.jpg" alt="Snake bite on side of child's foot" />
     <p>
       A horned rattlesnake exhibits its infamous defensive rattle at the end of
       its tail.
