completed Advanced html webpage project.

--- a/Week-2/submission/Session-04/Execrise-5-Advance/index.html
+++ b/Week-2/submission/Session-04/Execrise-5-Advance/index.html
@@ -16,10 +16,10 @@
             <a href="./index.html">Home</a>
           </li>
           <li>
-            <a href="#">Add Reviews</a>
+            <a href="./addreview.html">Add Reviews</a>
           </li>
           <li>
-            <a href="#">About</a>
+            <a href="./about.html">About</a>
           </li>
         </ul>
       </nav>
@@ -34,6 +34,7 @@
           alt="Main Street Restaurant"
           height="300px"
           width="500px"
+          class="hero"
         />
         <div class="rating">
           <img
@@ -79,6 +80,7 @@
           alt="Greek House"
           height="300px"
           width="500px"
+          class="hero"
         />
         <div class="rating">
           <img
@@ -109,6 +111,6 @@
         <p>Greek food at its best in a charming setting.</p>
       </section>
     </main>
-    <footer><p>&copy; 2023 Restaurant Reviews</p></footer>
+    <footer><p class="footer">&copy; 2023 Restaurant Reviews</p></footer>
   </body>
 </html>
