--- a/Week-2/submission/Session-04/Execrise-5-Advance/mainstreetcafe.html
+++ b/Week-2/submission/Session-04/Execrise-5-Advance/mainstreetcafe.html
@@ -16,10 +16,10 @@
             <a href="./index.html">Home</a>
           </li>
           <li>
-            <a href="#">Add Reviews</a>
+            <a href="./addreview.html">Add Reviews</a>
           </li>
           <li>
-            <a href="#">About</a>
+            <a href="./about.html">About</a>
           </li>
         </ul>
       </nav>
