--- a/Week-2/submission/Session-04/Execrise-4/index.html
+++ b/Week-2/submission/Session-04/Execrise-4/index.html
@@ -6,11 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Join a Social Network</title>
     <style>
-      form {
-        max-width: 70%;
-        margin: 20px auto;
+      body {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
       }
-
       #fullName {
         margin-left: 50px;
       }
