--- a/Week-2/submission/Session-04/Execrise-5-Advance/about.html
+++ b/Week-2/submission/Session-04/Execrise-5-Advance/about.html
@@ -59,6 +59,6 @@
         referrerpolicy="no-referrer-when-downgrade"
       ></iframe>
     </main>
-    <footer><p class="about-footer">&copy; 2023 Restaurant Reviews</p></footer>
+    <footer><p>&copy; 2023 Restaurant Reviews</p></footer>
   </body>
 </html>
