--- a/Week-2/submission/Session-04/Execrise-5-Advance/addreview.html
+++ b/Week-2/submission/Session-04/Execrise-5-Advance/addreview.html
@@ -46,7 +46,7 @@
         </div>
         <div>
           <label for="rating">Rating?</label>
-          <input type="number" min="0" max="5" id="rating" placeholder="5" />
+          <input type="number" min="0" max="5" id="rating" value="5" />
         </div>
         <div>
           <label for="textarea">Details?</label>
