--- a/Week-2/submission/Session-04/Execrise-5-Advance/index.html
+++ b/Week-2/submission/Session-04/Execrise-5-Advance/index.html
@@ -111,6 +111,6 @@
         <p>Greek food at its best in a charming setting.</p>
       </section>
     </main>
-    <footer><p class="footer">&copy; 2023 Restaurant Reviews</p></footer>
+    <footer><p>&copy; 2023 Restaurant Reviews</p></footer>
   </body>
 </html>
